PyQuest/src/test/semantic_analysis/valid/test017.ql
// Compatible types for or operation
form testForm {
	"First Question"
	someIdentifier : boolean = False || True
}