PyQuest/src/test/semantic_analysis/invalid/test027.ql
// Incompatible result type for or operation
form testForm {
	"First Question"
	someIdentifier : integer = False || True
}